[package]
name = "advanced_type"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "hello_macro",
    "hello_macro_derive",
    "attr_macro",
    "sql"
]

[dependencies]
hello_macro = { path = "hello_macro" }
attr_macro = { path = "attr_macro" }
sql = { path = "sql" }