[package]
name = "rust-os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

#[unstable]
## cross compile core library for custom target
#build-std = ["core", "compiler_builtins"]
#build-std-features = ["compiler-builtins-mem"]

# build with custom target.json: cargo build --target=x86-bare-metal.json -Z build-std=core