[package]
name = "unsafe_rust"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#[build]
#rustflags = ["-l", "dylib=/Users/tobias/projects/rust-demos/unsafe_rust/src/c_src/libdemo.so"]
[dependencies]
libc = "*"

[profile.dev]
rpath = true